objects/Action_Team_Youth_Board__c.object
<CustomObject>
    <description>TCS Action Teams and Youth Boards</description>
    <fields>
        <fullName>Actual_completion_date__c</fullName>
        <label>Actual completion date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cluster__c</fullName>
        <label>Cluster</label>
        <referenceTo>Cluster__c</referenceTo>
        <relationshipLabel>Action Teams and Youth Boards</relationshipLabel>
        <relationshipName>Action_Teams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Members__c</fullName>
        <label>Current Members</label>
        <summaryFilterItems>
            <field>Action_Team_Youth_Board_Membership__c.Status__c</field>
            <operation>equals</operation>
            <value>Grad member</value>
        </summaryFilterItems>
        <summaryForeignKey>Action_Team_Youth_Board_Membership__c.Action_Team__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding_Status__c</fullName>
        <label>Funding Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Applied</fullName>
                </value>
                <value>
                    <fullName>Successful</fullName>
                </value>
                <value>
                    <fullName>Unsuccessful</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Induction Mentor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Action_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reserve_List_Notes__c</fullName>
        <label>Reserve List Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Session_10_type__c</fullName>
        <label>Session 10 type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Meeting management (core)</fullName>
                </value>
                <value>
                    <fullName>Launch event evaluation (core)</fullName>
                </value>
                <value>
                    <fullName>Celebration (core)</fullName>
                </value>
                <value>
                    <fullName>Design own event 1</fullName>
                </value>
                <value>
                    <fullName>Design own event 2</fullName>
                </value>
                <value>
                    <fullName>Design own event 3</fullName>
                </value>
                <value>
                    <fullName>Design own event 4</fullName>
                </value>
                <value>
                    <fullName>Design own event 5</fullName>
                </value>
                <value>
                    <fullName>Thank you event</fullName>
                </value>
                <value>
                    <fullName>Group volunteer</fullName>
                </value>
                <value>
                    <fullName>Meet a local org</fullName>
                </value>
                <value>
                    <fullName>Learn about an issue</fullName>
                </value>
                <value>
                    <fullName>Fundraise</fullName>
                </value>
                <value>
                    <fullName>Values</fullName>
                </value>
                <value>
                    <fullName>Make NCS better</fullName>
                </value>
                <value>
                    <fullName>RCD Video</fullName>
                </value>
                <value>
                    <fullName>Mentor training</fullName>
                </value>
                <value>
                    <fullName>CV writing</fullName>
                </value>
                <value>
                    <fullName>Interview skills</fullName>
                </value>
                <value>
                    <fullName>Refection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Session_11_type__c</fullName>
        <label>Session 11 type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Meeting management (core)</fullName>
                </value>
                <value>
                    <fullName>Launch event evaluation (core)</fullName>
                </value>
                <value>
                    <fullName>Celebration (core)</fullName>
                </value>
                <value>
                    <fullName>Design own event 1</fullName>
                </value>
                <value>
                    <fullName>Design own event 2</fullName>
                </value>
                <value>
                    <fullName>Design own event 3</fullName>
                </value>
                <value>
                    <fullName>Design own event 4</fullName>
                </value>
                <value>
                    <fullName>Design own event 5</fullName>
                </value>
                <value>
                    <fullName>Thank you event</fullName>
                </value>
                <value>
                    <fullName>Group volunteer</fullName>
                </value>
                <value>
                    <fullName>Meet a local org</fullName>
                </value>
                <value>
                    <fullName>Learn about an issue</fullName>
                </value>
                <value>
                    <fullName>Fundraise</fullName>
                </value>
                <value>
                    <fullName>Values</fullName>
                </value>
                <value>
                    <fullName>Make NCS better</fullName>
                </value>
                <value>
                    <fullName>RCD Video</fullName>
                </value>
                <value>
                    <fullName>Mentor training</fullName>
                </value>
                <value>
                    <fullName>CV writing</fullName>
                </value>
                <value>
                    <fullName>Interview skills</fullName>
                </value>
                <value>
                    <fullName>Refection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Session_12_type__c</fullName>
        <label>Session 12 type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Meeting management (core)</fullName>
                </value>
                <value>
                    <fullName>Launch event evaluation (core)</fullName>
                </value>
                <value>
                    <fullName>Celebration (core)</fullName>
                </value>
                <value>
                    <fullName>Design own event 1</fullName>
                </value>
                <value>
                    <fullName>Design own event 2</fullName>
                </value>
                <value>
                    <fullName>Design own event 3</fullName>
                </value>
                <value>
                    <fullName>Design own event 4</fullName>
                </value>
                <value>
                    <fullName>Design own event 5</fullName>
                </value>
                <value>
                    <fullName>Thank you event</fullName>
                </value>
                <value>
                    <fullName>Group volunteer</fullName>
                </value>
                <value>
                    <fullName>Meet a local org</fullName>
                </value>
                <value>
                    <fullName>Learn about an issue</fullName>
                </value>
                <value>
                    <fullName>Fundraise</fullName>
                </value>
                <value>
                    <fullName>Values</fullName>
                </value>
                <value>
                    <fullName>Make NCS better</fullName>
                </value>
                <value>
                    <fullName>RCD Video</fullName>
                </value>
                <value>
                    <fullName>Mentor training</fullName>
                </value>
                <value>
                    <fullName>CV writing</fullName>
                </value>
                <value>
                    <fullName>Interview skills</fullName>
                </value>
                <value>
                    <fullName>Refection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Think_Big_funding_amount__c</fullName>
        <label>Think Big funding amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_ApplicantsRoll__c</fullName>
        <label>Total Applicants</label>
        <summaryForeignKey>Action_Team_Youth_Board_Membership__c.Action_Team__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_number_of_applications_received__c</fullName>
        <label>Total number of applications received</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Defines whether Action Team or Youth Board</description>
        <inlineHelpText>Select whether Action Team or Youth Board</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Action Team</fullName>
                </value>
                <value>
                    <fullName>Youth Board</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unsuccessful_Applicant__c</fullName>
        <label>Unsuccessful Applicants</label>
        <summaryFilterItems>
            <field>Action_Team_Youth_Board_Membership__c.Status__c</field>
            <operation>equals</operation>
            <value>Unsuccessful applicant</value>
        </summaryFilterItems>
        <summaryForeignKey>Action_Team_Youth_Board_Membership__c.Action_Team__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_mentor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Mentor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Action_Teams_and_Youth_Boards</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Action Team or Youth Board</label>
    <listViews>
        <fullName>Action_Teams</fullName>
        <columns>Funding_Status__c</columns>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Project__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Cluster__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Action Team</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>9/1/2012 12:00 AM</value>
        </filters>
        <label>Action Teams</label>
    </listViews>
    <listViews>
        <fullName>Local_Youth_Boards_2015_16</fullName>
        <columns>NAME</columns>
        <columns>Notes__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>project_mentor__c</columns>
        <columns>Current_Members__c</columns>
        <columns>Total_ApplicantsRoll__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Youth Board 2015-16</value>
        </filters>
        <label>Summer 2015 Local YB Recruitment</label>
    </listViews>
    <listViews>
        <fullName>Local_Youth_Boards_2016_17</fullName>
        <columns>NAME</columns>
        <columns>Cluster__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>project_mentor__c</columns>
        <columns>Total_ApplicantsRoll__c</columns>
        <columns>Current_Members__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Youth Board 2016-17</value>
        </filters>
        <label>2016-17 Local Youth Boards</label>
    </listViews>
    <listViews>
        <fullName>Regional_Youth_Boards_2015_16</fullName>
        <columns>NAME</columns>
        <columns>Project_Manager__c</columns>
        <columns>Total_ApplicantsRoll__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>2015/16 Regional Youth Board</value>
        </filters>
        <label>Regional Youth Boards 2015/16</label>
    </listViews>
    <listViews>
        <fullName>X2013_14_Youth_Boards</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Cluster__c</columns>
        <columns>Project_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>2013/14</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>2013 Epsom,Reigate</value>
        </filters>
        <label>2013/14 Youth Boards</label>
    </listViews>
    <listViews>
        <fullName>X2015_16_Associate_Mentor_EOIs</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Total_ApplicantsRoll__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Action_Team_Youth_Board__c.Action_Team</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Associate Mentor EOIs</value>
        </filters>
        <label>2015-16 Associate Mentor EOIs</label>
    </listViews>
    <listViews>
        <fullName>X2015_16_NCS_Youth_Assessors</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Total_ApplicantsRoll__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Action_Team_Youth_Board__c.Action_Team</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Youth Assessors 2015/16</value>
        </filters>
        <label>2015-16 NCS Youth Assessors</label>
    </listViews>
    <listViews>
        <fullName>X2015_16_Regional_TCS_Projects</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Total_ApplicantsRoll__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Action_Team_Youth_Board__c.Action_Team</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>NCS Ambassadors 2015/16</value>
        </filters>
        <label>2015-16 NCS Ambassadors</label>
    </listViews>
    <listViews>
        <fullName>X2015_16_Regional_TCS_Projects1</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6</booleanFilter>
        <columns>NAME</columns>
        <columns>Project_Manager__c</columns>
        <columns>Start_date__c</columns>
        <columns>Total_ApplicantsRoll__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Action_Team_Youth_Board__c.Action_Team</value>
        </filters>
        <filters>
            <field>Start_date__c</field>
            <operation>greaterOrEqual</operation>
            <value>10/1/2015</value>
        </filters>
        <filters>
            <field>Start_date__c</field>
            <operation>lessOrEqual</operation>
            <value>9/30/2016</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>NCS Ambassadors 2015/16,Youth Assessors,Associate Mentor EOI</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>Ignite</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>Test</value>
        </filters>
        <label>2015-16 Regional TCS Projects</label>
    </listViews>
    <listViews>
        <fullName>X2015_16_Youth_Boards</fullName>
        <columns>NAME</columns>
        <columns>Cluster__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>project_mentor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>2015-16</value>
        </filters>
        <label>2015-16 Youth Boards</label>
    </listViews>
    <listViews>
        <fullName>X2016_17_LCSA_EOIs</fullName>
        <columns>NAME</columns>
        <columns>Project_Manager__c</columns>
        <columns>Current_Members__c</columns>
        <columns>Total_ApplicantsRoll__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>LCSA</value>
        </filters>
        <label>2016-17 LCSA EOIs</label>
    </listViews>
    <listViews>
        <fullName>X2016_Associate_Mentor_EOIs</fullName>
        <columns>NAME</columns>
        <columns>Project_Manager__c</columns>
        <columns>Current_Members__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>2016 Associate Mentor EOI</value>
        </filters>
        <label>2016 Associate Mentor EOIs</label>
    </listViews>
    <listViews>
        <fullName>Youth_Boards1</fullName>
        <columns>NAME</columns>
        <columns>Cluster__c</columns>
        <columns>Project_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Action_Team_Youth_Board__c.Youth_Board,Action_Team_Youth_Board__c.Youth_Board_2013</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessThan</operation>
            <value>1/1/2013 12:00 AM</value>
        </filters>
        <label>Youth Boards</label>
        <sharedTo>
            <group>ProgrammesAll</group>
            <group>Systems_and_Product</group>
            <group>TCS</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Youth_Boards_2013</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Current_Members__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>project_mentor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Youth Board 2014</value>
        </filters>
        <label>2014/15 Youth Boards</label>
    </listViews>
    <listViews>
        <fullName>Youth_Boards_KK_MKTG</fullName>
        <columns>Type__c</columns>
        <columns>Project__c</columns>
        <columns>Project_Manager__c</columns>
        <columns>Cluster__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Youth Board</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>6/1/2013 12:00 AM</value>
        </filters>
        <label>Youth Boards KK MKTG</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action Teams and Youth Boards</pluralLabel>
    <recordTypes>
        <fullName>Action_Team</fullName>
        <active>true</active>
        <description>For use with Action Teams</description>
        <label>Action Team</label>
    </recordTypes>
    <recordTypes>
        <fullName>Youth_Board</fullName>
        <active>true</active>
        <description>For use with Youth Boards</description>
        <label>Youth Board</label>
    </recordTypes>
    <recordTypes>
        <fullName>Youth_Board_2013</fullName>
        <active>true</active>
        <label>Youth Board 2013</label>
    </recordTypes>
    <recordTypes>
        <fullName>Youth_Board_2014</fullName>
        <active>true</active>
        <label>Youth Board 2014</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cluster_Change_Restriction</fullName>
        <active>false</active>
        <description>Only allows system admins, innovations and Graduate staff to edit cluster field</description>
        <errorConditionFormula>AND( 
ISCHANGED(  Cluster__c  ), 
$User.ProfileId &lt;&gt; &quot;00eC0000001TNhw&quot;, 
$User.ProfileId &lt;&gt; &quot;00eC0000001Sttg&quot;, 
$User.ProfileId &lt;&gt; &quot;00e80000000th5B&quot;, 
$User.ProfileId &lt;&gt; &quot;00eC0000001St94&quot;, 
NOT( $Permission.Graduate_Team_Permissions))</errorConditionFormula>
        <errorDisplayField>Cluster__c</errorDisplayField>
        <errorMessage>Sorry! You do not have permission to change the cluster.</errorMessage>
    </validationRules>
</CustomObject>